--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,68 @@
 @import "typography";
 
 body {
-  background: $c-gray;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: rgb(61, 78, 97);
+}
+
+a {
+  color: rgb(61, 78, 97);
+  text-decoration: none;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+
+  .group-menu {
+    width: 373px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+.big-photo {
+  width: 100%;
+}
+
+.form-container {
+  width: 330px;
+  height: 319px;
+
+  .booking-form {
+    font-size: 16px;
+    line-height: 19px;
+    border: 1px solid #e1e7ed;
+    border-radius: 3px;
+    padding: 30px;
+
+    .form-item {
+      width: 100%;
+      height: 50px;
+      margin-bottom: 16px;
+    }
+
+    .form-item input {
+      width: 251px;
+      height: 100%;
+      border: 1px solid #e1e7ed;
+      border-radius: 3px;
+      padding: 0 0 0 17px;
+    }
+
+    .form-item .button {
+      width: 100%;
+      height: 100%;
+      color: white;
+      background: #fd5c63;
+      border-radius: 4px;
+      border: 1px solid #fd5c63;
+    }
+
+  }
 }
