--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -76,16 +76,51 @@ a {
 .main {
   display: flex;
   justify-content: center;
-
+  padding-bottom: 75px;
   .container {
     width: 900px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 
-    // .about-apartment {
-    //   //
-    // }
+    .about-apartment {
+      width: 491px;
+      color: #3d4e61;
+      &__hostName {
+        font-size: 28px;
+        line-height: 33px;
+        font-weight: bold;
+        margin-bottom: 11px;
+      }
+          
+      &__place {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 12px;
+      }
+      
+      &__text {
+        font-size: 16px;
+        line-height: 19px;
+        margin: 0;
+      }
+      
+      &__btn {
+        width: 150px;
+        height: 50px;
+        margin: 25px 0 3px;
+        font-size: 16px;
+        line-height: 22px;
+        font-weight: bold;
+        color: #118488;
+        background-color: #fff;
+        border: 1px solid #118488;
+        border-radius: 4px;
+        outline: none;
+        cursor: pointer;
+      }
+    }
+    
 
     .apartment {
       margin-bottom: 44.05px;
@@ -232,5 +267,40 @@ a {
         color: #3d4e61;
       }
     }
+  }
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 213px;
+  font-size: 16px;
+  line-height: 19px;
+  box-shadow: 0 -1px 0 #e1e7ed;
+  &-wrapper {
+    width: 900px;
+  }
+
+  &__navigation {
+    display: flex;
+    justify-content: space-between;
+    width: 685px;
+  }
+  &__li {
+    list-style-type: none;
+    margin-top: 9px;
+    a {
+      text-decoration: none;
+      color: #3d4e61;
+    }
+  }
+  &__li-margin {
+    margin: 0 0 20px;
+    font-weight: bold;
+  }
+  &__ul {
+    padding: 0;
   }
 }
