--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,32 +3,53 @@
 @import "typography";
 
 body {
-  box-sizing: border-box;
   margin: 0;
-  padding: 0;
-  color: rgb(61, 78, 97);
+  box-sizing: border-box;
+  font-family: "Avenir", sans-serif;
+  font-size: 16px;
+  color: $mainColor;
 }
 
 a {
-  color: rgb(61, 78, 97);
+  color: $mainColor;
   text-decoration: none;
 }
 
-.navbar {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 20px;
-
-  .group-menu {
-    width: 373px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  padding: 15px 25px;
+  .logo {
+    flex: 3 1 30px;
+  }
+  &-nav {
+    flex: 0 1 345px;
+    .nav-menu {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin: 0;
+      padding: 0;
+      &__item {
+        list-style-type: none;
+        margin-right: 38px;
+        .nav-menu__link {
+          font-weight: bold;
+          transition: 0.2s;
+          &:hover {
+            color: $hoverColor;
+          }
+        }
+      }
+    }
+  }
+  .person-account {
+    flex: 0 1 30px;
   }
 }
 
-.big-photo {
+.apartment-photos {
   width: 100%;
   background: url(../images/Image.png) no-repeat center center;
   background-size: cover;
@@ -36,47 +57,11 @@ a {
   margin-bottom: 40px;
 }
 
-.form-container {
-  width: 330px;
-  height: 319px;
-
-  .booking-form {
-    font-size: 16px;
-    line-height: 19px;
-    border: 1px solid #e1e7ed;
-    border-radius: 3px;
-    padding: 30px;
-
-    .form-item {
-      width: 100%;
-      height: 50px;
-      margin-bottom: 16px;
-    }
-
-    .form-item input {
-      width: 251px;
-      height: 100%;
-      border: 1px solid #e1e7ed;
-      border-radius: 3px;
-      padding: 0 0 0 17px;
-    }
-
-    .form-item .button {
-      width: 100%;
-      height: 100%;
-      color: white;
-      background: #fd5c63;
-      border-radius: 4px;
-      border: 1px solid #fd5c63;
-    }
-
-  }
-}
-
 .main {
   display: flex;
   justify-content: center;
   padding-bottom: 75px;
+
   .container {
     width: 900px;
     display: flex;
@@ -84,27 +69,29 @@ a {
     flex-wrap: wrap;
 
     .about-apartment {
-      width: 491px;
-      color: #3d4e61;
+      flex: 0 1 491px;
+      color: $mainColor;
+
       &__hostName {
+        font-family: "Roboto", sans-serif;
         font-size: 28px;
         line-height: 33px;
         font-weight: bold;
         margin-bottom: 11px;
       }
-          
+
       &__place {
         font-size: 14px;
         line-height: 16px;
         margin-bottom: 12px;
       }
-      
+
       &__text {
         font-size: 16px;
         line-height: 19px;
         margin: 0;
       }
-      
+
       &__btn {
         width: 150px;
         height: 50px;
@@ -118,9 +105,12 @@ a {
         border-radius: 4px;
         outline: none;
         cursor: pointer;
+        &:hover {
+          color: #fff;
+          background-color: #118488;
+        }
       }
     }
-    
 
     .apartment {
       margin-bottom: 44.05px;
@@ -129,7 +119,7 @@ a {
       &__title {
         font-size: 36px;
         line-height: 42px;
-        color: #3d4e61;
+        color: $mainColor;
         margin-bottom: 10.16px;
       }
 
@@ -148,11 +138,11 @@ a {
         &__link {
           font-size: 16px;
           line-height: 19px;
-          color: #3d4e61;
+          color: $mainColor;
           margin-right: 32px;
 
           &:hover {
-            color: #687c94;
+            box-shadow: 0 1px 0 $hoverColor;
           }
         }
       }
@@ -160,18 +150,20 @@ a {
       &__text {
         font-size: 16px;
         line-height: 24px;
-        color: #3d4e61;
+        color: $mainColor;
         margin-bottom: 24px;
       }
 
       &__contact {
         font-size: 16px;
         line-height: 19px;
-        color: #3d4e61;
+        color: $mainColor;
         font-weight: bold;
+        transition: 0.2s;
 
         &:hover {
-          box-shadow: 0 1px 0 #3d4e61;
+          color: $hoverColor;
+          box-shadow: 0 1px 0 $hoverColor;
         }
       }
     }
@@ -182,7 +174,7 @@ a {
       &__title {
         font-size: 20px;
         line-height: 23px;
-        color: #3d4e61;
+        color: $mainColor;
         margin-bottom: 25px;
         font-weight: bold;
       }
@@ -195,12 +187,13 @@ a {
         &__link {
           font-size: 16px;
           line-height: 19px;
-          color: #3d4e61;
+          color: $mainColor;
           margin-bottom: 17px;
           flex: 0 0 175px;
+          transition: 0.2s;
 
           &:hover {
-            color: #687c94;
+            color: $hoverColor;
           }
         }
       }
@@ -208,23 +201,25 @@ a {
       .all-amenities__link {
         font-size: 16px;
         line-height: 19px;
-        color: #3d4e61;
+        color: $mainColor;
         font-weight: bold;
+        transition: 0.2s;
 
         &:hover {
-          box-shadow: 0 1px 0 #3d4e61;
+          box-shadow: 0 1px 0 $hoverColor;
+          color: $hoverColor;
         }
       }
     }
 
     .reviews {
       margin-bottom: 50px;
-      width: 500px;
+      flex: 1 1 500px;
 
       &__title {
         font-size: 28px;
         line-height: 33px;
-        color: #3d4e61;
+        color: $mainColor;
         font-weight: bold;
         margin-bottom: 38px;
       }
@@ -249,22 +244,69 @@ a {
             height: 50px;
 
             &__name {
-              font-size: 20px;
-              color: #3d4e61;
+              color: $mainColor;
+              font-weight: bold;
+              font-size: 18px;
             }
 
             &__data {
-              font-size: 14px;
-              color: #3d4e61;
+              color: $mainColor;
+              font-size: 18px;
             }
           }
         }
       }
 
       &__text {
+        flex: 0 0 300px;
         font-size: 16px;
         line-height: 19px;
-        color: #3d4e61;
+        color: $mainColor;
+      }
+    }
+  }
+}
+
+.booking-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  border: 1px solid #e1e7ed;
+  border-radius: 3px;
+  height: 330px;
+  width: 330px;
+
+  &__wrapper {
+    flex: 0 0 270px;
+  }
+
+  .form {
+    margin-top: 40px;
+
+    &__item {
+      width: 270px;
+      height: 50px;
+      padding: 14px 17px;
+      box-sizing: border-box;
+      font-family: "Avenir", sans-serif;
+      border: 1px solid #e1e7ed;
+      border-radius: 3px;
+      margin-bottom: 16px;
+      font-size: 16px;
+      outline: none;
+    }
+
+    &__item[type="submit"] {
+      margin-top: 8px;
+      background: #fd5c63;
+      border-radius: 4px;
+      color: #fff;
+      cursor: pointer;
+      transition: 0.2s;
+
+      &:hover {
+        background: lighten(#fd5c63, 6%);
       }
     }
   }
@@ -274,33 +316,69 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 213px;
+  min-height: 213px;
   font-size: 16px;
   line-height: 19px;
   box-shadow: 0 -1px 0 #e1e7ed;
+
   &-wrapper {
     width: 900px;
   }
 
   &__navigation {
     display: flex;
-    justify-content: space-between;
-    width: 685px;
+    justify-content: flex-start;
   }
+
+  &__li_bold {
+    font-weight: bold;
+  }
+
   &__li {
     list-style-type: none;
     margin-top: 9px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
     a {
       text-decoration: none;
-      color: #3d4e61;
+      color: $mainColor;
     }
   }
-  &__li-margin {
-    margin: 0 0 20px;
-    font-weight: bold;
-  }
+
   &__ul {
     padding: 0;
+    flex: 1 1 300px;
+  }
+}
+
+@media (max-width: 960px) {
+  .main {
+    padding: 0 16px;
+    .container {
+      justify-content: center;
+      .about-apartment {
+        margin-bottom: 30px;
+      }
+      .booking-form {
+        margin-bottom: 30px;
+      }
+    }
+  }
+  .footer {
+    padding: 0 16px;
+
+    &__navigation {
+      justify-content: space-between;
+    }
+  }
+
+}
+
+@media (max-width: 576px) {
+  .about-apartment {
+    flex: 491px;
   }
 }
