--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -121,6 +121,7 @@ a {
         line-height: 42px;
         color: $mainColor;
         margin-bottom: 10.16px;
+        font-family: "Roboto", sans-serif;
       }
 
       .entire-apartament__link {
