--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -14,7 +14,7 @@
 
 @font-face {
   font-family: "Avenir";
-  src: url("../fonts/Avenir-Medium.ttf") format("truetype");
+  src: url("../fonts/Avenir-Book.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
